[package]
name = "webpage_scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
headless_chrome = "1.0.20"
pandoc = "0.8.11"
reqwest = { version = "0.12.25", features = ["blocking"] }
scraper = "0.25.0"
serde = "1.0.228"
serde_json = "1.0.146"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["local-offset"] }
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.5.7"
